--- a/styles/modules.css
+++ b/styles/modules.css
@@ -11,11 +11,7 @@
   height: 150px;
 }
 
-.c {
-  height: 125px;
-}
-
-.d {
+.c, .d {
   height: 125px;
 }
 
@@ -23,7 +19,7 @@
   width: 50%;
   height: 250px;
   display: inline-block;
-  font-size: 16px;
+  font-size: 12px;
 }
 
 .e, .g {
@@ -40,4 +36,49 @@
 
 .clearfix {
   overflow: hidden;
+}
+
+@media only screen and (min-width: 769px) {
+  body {
+    max-width: 958px;
+  }
+  .a {
+    width: 100%;
+    height: 100px;
+  }
+  .b {
+    height: 598px;
+    width: 198px;
+    float: left;
+  }
+
+  .cd-container {
+    display: flex;
+  }
+
+  .c, .d {
+    width: 382px;
+    height: 198px;
+  }
+
+  .c {
+    float: left;
+  }
+
+  .d {
+    float: right;
+  }
+
+  .efgh-container {
+    display: flex;
+    height: 250px;
+  }
+  .e, .f, .g, .h {
+    height: 250px;
+    width: 190px;
+    float: left;
+  }
+  .i {
+    height: 148px;
+  }
 }
