--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,11 @@
 body {
   padding: 50px 20px 50px 20px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color: #4a4a4a;
+}
+
+p {
+  vertical-align: middle;
 }
