--- a/styles/modules.css
+++ b/styles/modules.css
@@ -5,37 +5,29 @@
 
 .a {
   height: 75px;
+  line-height: 3.5em;
 }
 
 .b {
   height: 150px;
+  line-height: 7.5em;
 }
 
 .c, .d {
   height: 125px;
+  line-height: 6em;
 }
 
 .e, .f, .g, .h {
-  width: 50%;
+  flex-basis: 50%;
   height: 250px;
-  display: inline-block;
-  font-size: 12px;
-}
-
-.e, .g {
-  float: left;
-}
-
-.f, .h {
-  float: right;
+  font-size: 20px;
+  line-height: 12.5em;
 }
 
 .i {
   height: 80px;
-}
-
-.clearfix {
-  overflow: hidden;
+  line-height: 4em;
 }
 
 @media only screen and (min-width: 769px) {
@@ -44,12 +36,14 @@
   }
   .a {
     width: 100%;
-    height: 100px;
+    height: 98px;
+    line-height: 5em;
   }
   .b {
     height: 598px;
     width: 198px;
     float: left;
+    line-height: 30em;
   }
 
   .cd-container {
@@ -57,8 +51,9 @@
   }
 
   .c, .d {
-    width: 382px;
+    width: 380px;
     height: 198px;
+    line-height: 10em;
   }
 
   .c {
@@ -76,9 +71,12 @@
   .e, .f, .g, .h {
     height: 250px;
     width: 190px;
-    float: left;
+    /* float: left; */
+    line-height: 12.5em;
   }
   .i {
     height: 148px;
+    width: 100%;
+    line-height: 7em;
   }
 }
