--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,5 +1,14 @@
 .efgh-container {
   display: flex;
+  flex-wrap: wrap;
   height: 500px;
+  width: 100%;
   font-size: 0;
+}
+
+@media only screen and (min-width: 769px) {
+  .efgh-container {
+    height: 250px;
+    width: auto;
+  }
 }
